# mcp-cadquery

./: .coverage  .coveragerc  .gitignore  README.llm.md  README.md  code_review.llm.md  context.llm.md  pyproject.toml  pytest.ini  requirements.txt  research_context.llm.md  research_log.llm.md  run_dev.py  run_dev.sh  run_example.py  run_frontend_dev.py  run_frontend_dev.sh  run_samples.py  run_server.sh  run_tests.py  server.py  server_sse.py  server_sse.sh  server_stdio.py  server_stdio.sh  setup_env.py  setup_env.sh  start.sh  start_sse.py  start_sse.sh
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx
frontend/src/components/: Controls.tsx  LogDisplay.tsx  ParamsInput.tsx  RenderOutput.tsx  ScriptInput.tsx  StatusBar.tsx
part_library/: bracket.py  error_part.py  simple_cube.py  widget_a.py
shapes/: base.step  door.step  door_handle.step  roof.step  wall.step  window.step
src/mcp_cadquery_server/: __init__.py  cli.py  core.py  env_setup.py  handlers.py  main.py  mcp_api.py  models.py  script_runner.py  state.py  stdio_server.py  web_server.py
test_output/: test_box.tjs.json
tests/: test_cadquery_core.py  test_cli.py  test_core_helpers.py  test_environment.py  test_examples.py  test_part_library.py  test_script_runner.py  test_server_execution.py  test_server_export.py  test_server_handlers.py  test_server_logic.py
